fix html & css spacing, remove blank lines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
-
 /*Main grid styling*/
 .grid-container {
   display: grid;
-  grid-template-columns:auto auto auto;
+  grid-template-columns: auto auto auto;
   gap: 5px;
   padding: 10px;
 }
@@ -11,7 +10,7 @@
 .grid-item {
   padding: 7px;
   font-size: 20px;
-  text-align: center;  
+  text-align: center;
 }
 
 /*game instructions*/
@@ -19,7 +18,7 @@
   padding: 7px;
   font-size: 20px;
   text-align: left;
-  justify-content: center;  
+  justify-content: center;
 }
 
 /*nav menu*/
@@ -40,7 +39,7 @@ a {
   text-decoration: none;
   display: inline;
   margin-left: 5px;
-  margin-right:5px;
+  margin-right: 5px;
 }
 
 /*nav menu selection indicator*/
@@ -51,27 +50,26 @@ a {
 
 /*Main game header title*/
 .center {
-    margin: auto;
-    margin-top: 20px;
-    width: 60%;
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 20px;
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: darkcyan;
-    color: rgb(248, 249, 250);
-  }
+  margin: auto;
+  margin-top: 20px;
+  width: 60%;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 20px;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: darkcyan;
+  color: rgb(248, 249, 250);
+}
 
-  /*Game selection buttons*/
-  button {
-    height: 100px;
-    width: 120px;
-    font-size: 25px;
-    margin: 20px;
-    border-radius: 20px;
-    text-align: center;
-    
+/*Game selection buttons*/
+button {
+  height: 100px;
+  width: 120px;
+  font-size: 25px;
+  margin: 20px;
+  border-radius: 20px;
+  text-align: center;
 }
 
 /*Game images, rock, paper & scissors*/
@@ -85,31 +83,31 @@ img {
 /*Main background colour*/
 body {
   background-color: rgb(146, 245, 240);
-   }
+}
 
 /*Styling for scoreboard*/
 .score-area {
-    margin: auto;
-    margin-top: 0px;
-    width: 60%;
-    height :fit-content;
-    border: 1px solid black;
-    padding: 0px;
-    text-align: center;
-    background-color: darkcyan;
-    color: rgb(248, 249, 250);
-    border-radius: 20px;
-    
+  margin: auto;
+  margin-top: 0px;
+  width: 60%;
+  height: fit-content;
+  border: 1px solid black;
+  padding: 0px;
+  text-align: center;
+  background-color: darkcyan;
+  color: rgb(248, 249, 250);
+  border-radius: 20px;
 }
-    
-/*Responsive styling for small screens*/
-  @media only screen and (max-width: 600px) {
-    img {
-      display: none;
-    }
 
-    #menu {
-      width: 55%;
+/*Responsive styling for small screens*/
+@media only screen and (max-width: 600px) {
+  img {
+    display: none;
+  }
+
+  #menu {
+    width: 55%;
+    color:rgb(248, 249, 250);
   }
 
   .center {
@@ -117,19 +115,21 @@ body {
     border: 1px solid black;
     border-radius: 15px;
     padding: 0px;
-    font-size:150%;
-
+    font-size: 150%;
   }
 
-  #rock, #paper, #scissors, #reset-button{
+  #rock,
+  #paper,
+  #scissors,
+  #reset-button {
     height: 60px;
     margin: 5px;
   }
 
-  .grid-item, .score-area {
+  .grid-item,
+  .score-area {
     padding: 0px;
     font-size: 15px;
-    text-align: center;  
+    text-align: center;
   }
-
-  }
+}
